--- a/index.html
+++ b/index.html
@@ -1,51 +1,36 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="author" content="Anisur Rahaman Shahin">
-        <link rel="shortcut icon" type="image/x-icon" href="Resources/Images/fav.png">
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-        <!-- Front -->
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="Resources/Fonts/css/all.min.css">
-        <!-- Font Awesome -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <!-- Css -->
-        <link rel="stylesheet" href="resources/css/style.css">
-        <!-- Responsive -->
-        <link rel="stylesheet" href="resources/css/responsive.css">
-        <title>Pakege</title>
-    </head>
-    <body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"/>
+    
+    <!-- Custom CSS file  -->
+    <link rel="stylesheet" href="./resources/css/style.css">
+    <link rel="stylesheet" href="./resources/css/responsive.css">
+
+    <title>Starter Pack</title>
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+
+   
 
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-        <!-- main Js -->
-        <script src="resources/js/wow.min.js"></script>
-        <script src="resources/js/main.js"></script>
-        <script>
-            $('.scroll-top').click(function(){
-                $('html,body').animate({
-                    scrollTop : 0
-                }),100;
-            });
-            $('.scroll-top').hide();
-            $(window).scroll(function(){
-                var count = $(this).scrollTop();
 
-                if(count < 100){
-                    $('.scroll-top').hide()
-                }
-                else{
-                    $('.scroll-top').show();
-                    ;
-                }
-            });
-        </script>
-    </body>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+    <!-- Jquery CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+   <script src="./resources/js/main.js"></script>
+  </body>
 </html>
